chore: update title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
         <meta charset="UTF-8">
         <meta name=viewport content="width=device-width, initial-scale=1">
-        <title>2D CPU particles @mad.</title><!-- Latest compiled and minified CSS -->
+        <title>2D GPU particles @mad.</title><!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -35,7 +35,7 @@
 
       <footer class="footer" id="footer">
          <div class="container text-center">
-           <span class="text-muted">2D CPU Particle Tracing by <a href="https://github.com/madblade/">@madblade</a>.</span>
+           <span class="text-muted">2D GPU Particle Tracing by <a href="https://github.com/madblade/">@madblade</a>.</span>
          </div>
       </footer>
 	</body>
